<resources>
    <string name="app_name">Eduhealth beta 0.3</string>
<!--    home page-->
    <string name="app_name1">Eduhealth</string>
    <string name="app_name2">Time</string>
    <string name="fitur1">Video\nKesehatan</string>
    <string name="fitur1_2">Video Kesehatan</string>
    <string name="fitur2">Rekam\nJejak</string>
    <string name="fitur2_2">Rekam Jejak</string>
    <string name="fitur3">QnA</string>
    <string name="fitur4">Tentang\nAplikasi</string>

<!--    rekam jejak-->
    <string name="opsi1">Antropometri dan Status Gizi</string>
    <string name="opsi2">Skrining Anemia</string>
    <string name="opsi3">Pantau Sakit</string>

<!--    pantau sakit-->
    <string name="input_nis">NIS</string>
    <string name="input_nama">Nama</string>
    <string name="input_hari">Hari ke</string>
    <string name="input_sakit">Sakit</string>
    <string name="input_perawatan">Perawatan</string>

    <string name="input_bb">BB</string>
    <string name="input_tb">TB</string>
    <string name="input_usia">Usia</string>
    <string name="input_imt">IMT/U</string>
    <string name="input_status">Status Gizi</string>

    <string name="button_simpan">Simpan</string>
    <string name="button_tambah">Tambah</string>

<!--    video kesehatan-->
    <string name="popup_title">Tambahan Video\nKesehatan</string>
    <string name="popup_link">LINK</string>
    <string name="popup_judul">JUDUL</string>

    <string name="lorem_ipsum1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n

    </string>

<!--    skrining anemia-->
    <string name="confirm_iya">Iya</string>
    <string name="confirm_tidak">Tidak</string>
    <string name="question1">
        5 L (lemah, letih, lesu,\nlelah, lalai)
    </string>
    <string name="question2">
        Sakit kepala dan pusing
    </string>
    <string name="question3">
        Mata berkunang-kunang
    </string>
    <string name="question4">
        Mudah mengantuk
    </string>
    <string name="question5">
        Cepat capek
    </string>
    <string name="question6">
        Sulit berkonsentrasi
    </string>
    <string name="question7">
        Pucat pada muka
    </string>
    <string name="question8">
        Pucat pada telapak tangan
    </string>
    <string name="question9">
        Pucat pada kelopak mata
    </string>
    <string name="question10">
       Pucat pada bibir
    </string>
    <string name="question11">
        Pucat pada kulit
    </string>
    <string name="question12">
        Pucat pada kuku
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>