<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RekamJejakStatusGizi"
    android:paddingHorizontal="20dp"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_nis"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_nis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_nama"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input_bb"
                        android:fontFamily="@font/interregular"/>

                    <EditText
                        android:id="@+id/input_bb"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_shape"
                        android:minHeight="42dp"
                        android:paddingHorizontal="10dp"
                        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/interregular"
                        android:text="@string/input_tb" />

                    <EditText
                        android:id="@+id/input_tb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/input_shape"
                        android:minHeight="42dp"
                        android:paddingHorizontal="10dp"
                        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_usia"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_usia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_imt"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_imt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_status"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/btn_confirm_opsi1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_shape"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/interregular"
                android:gravity="center"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                android:text="@string/button_simpan"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>



</FrameLayout>