<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="290dp"
    android:layout_gravity="center"
    android:background="@drawable/radius_shape"
    android:backgroundTint="@color/white"
    android:paddingHorizontal="30dp"
    android:paddingVertical="25dp"
    >
    <LinearLayout
        android:id="@+id/popup_section1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/popup_title"
            android:textSize="20dp"
            tools:ignore="InefficientWeight,SpUsage,TextSizeCheck" />
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_cross"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/popup_section2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_section1"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interregular"
            android:text="@string/popup_link"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/edit_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:hint="https://img.youtube.."
            android:minHeight="38dp"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/interregular"
            android:text="@string/popup_judul"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/edit_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_shape"
            android:hint="judul"
            android:minHeight="38dp"
            android:paddingHorizontal="10dp"
            android:textSize="14sp"
            tools:ignore="Autofill,HardcodedText,TextContrastCheck,TextFields,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_shape"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/intermedium"
        android:gravity="center"
        android:minHeight="34dp"
        android:text="@string/button_tambah"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>