<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RekamJejakPantauSakit"
    android:paddingHorizontal="20dp"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_nis"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/input_nama"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_hari"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:inputType="number"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_hari"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_perawatan"
                android:fontFamily="@font/interregular"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/btn_confirm_opsi3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_shape"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/interregular"
                android:gravity="center"
                android:minHeight="42dp"
                android:paddingHorizontal="10dp"
                android:text="@string/button_simpan"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>