<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/section_1"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/bg_home"
                android:paddingStart="45dp"
                android:paddingEnd="0dp"
                android:paddingTop="20dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">
                    <ImageView
                        android:id="@+id/logo_ub"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/logo_ub"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:id="@+id/txt_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo_ub"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/app_name1"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        tools:ignore="ObsoleteLayoutParam,TextContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_1"
                        android:layout_marginTop="-15dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/app_name2"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        tools:ignore="ObsoleteLayoutParam,TextContrastCheck" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:scaleX="-1"
                    android:src="@drawable/people_home"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/section_1"
                android:paddingHorizontal="35dp"
                android:paddingVertical="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">
                <!--    part 1-->
                <LinearLayout
                    android:id="@+id/btn_video"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:background="@drawable/radius_shape"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:importantForAccessibility="no"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingHorizontal="20dp"
                    tools:ignore="HardcodedText">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img_video"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/fitur1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
                <!--    part 2-->
                <LinearLayout
                    android:id="@+id/btn_rekam_jejak"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:background="@drawable/radius_shape"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/orange"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingHorizontal="20dp">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img_rekam"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/fitur2"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/section_2"
                android:paddingHorizontal="35dp"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp"
                tools:ignore="DisableBaselineAlignment">
                <!--    part 1-->
                <LinearLayout
                    android:id="@+id/btn_qna"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:background="@drawable/radius_shape"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:backgroundTint="@color/green"
                    android:paddingTop="10dp"
                    >
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img_qna"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/fitur3"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
                <!--    part 2-->
                <LinearLayout
                    android:id="@+id/btn_tentang"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:background="@drawable/radius_shape"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/purple"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingHorizontal="20dp">
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img_tentang"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        tools:ignore="ContentDescription"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/fitur4"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


<View
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:background="@color/blue"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>